# platform

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
apps/api/src/platform_api/: __init__.py  main.py
apps/api/src/platform_api/api/: router.py
apps/api/src/platform_api/api/routes/: health.py
apps/api/src/platform_api/contexts/identity/application/: authentication_orchestrator.py
apps/api/src/platform_api/contexts/identity/application/ports/: authentication_providers.py  (+4 more)
apps/api/src/platform_api/contexts/identity/domain/: types.py
apps/api/src/platform_api/core/: config.py  dependencies.py
apps/api/src/platform_api/database/: base.py  config.py  session.py
apps/api/src/platform_api/shared/application/: unit_of_work.py
apps/api/src/platform_api/shared/infrastructure/: sqlalchemy_unit_of_work.py
docs/: adr-log.md  auth-spec.md  authentication-spec.md  decisions.md  project-handover.md  roadmap.md  snapshot.md
docs/ai/: ai-sdlc.md  getting-started.md
docs/ai/prompts/: adr-check.md  architecture-review.md  documentation-update.md  implementation.md  phase-completion.md  phase-start.md
docs/ai/prompts/development/: 01-start.md  02-build.md  03-review.md  04-update-docs.md  05-review-adr.md  06-complete.md  architecture-review.md  documentation-update.md  implementation.md  phase-complete.md  phase-start.md
docs/ai/prompts/maintenance/: adr-audit.md  dependency-audit.md  documentation-reconciliation.md  reconcile-docs.md  repository-audit.md  review-dependency.md  review-repository.md
docs/ai/state/: phase-state.yaml
docs/workflows/: ai-development-workflow.md  ai-sdlc.md  migration-workflow.md
tests/identity/application/: test_authentication_orchestrator.py
tests/identity/domain/: test_authentication_state_machine_contract.py
tests/persistence/: test_session.py  test_sqlalchemy_unit_of_work.py  test_user_repository_contract.py
(+24 files in other folders)
