[project]
name = "platform"
version = "0.1.0"
description = "A modern fintech platform built as a modular monolith."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.8.0",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["apps/api", "apps/agents", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "ASYNC",
    "S",
    "T20",
    "SIM",
    "RUF",
]
ignore = [
    "S101",
]

[tool.ruff.lint.isort]
known-first-party = ["apps"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
