[project]
name = "platform"
version = "0.1.0"
description = "A modern fintech platform built as a modular monolith."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13",
    "asyncpg>=0.29",
    "fastapi>=0.115.0",
    "sqlalchemy[asyncio]>=2.0",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.411",
    "pytest>=8.0",
    "ruff>=0.8.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["apps/api/src"]

[tool.pyright]
include = ["apps/api/src", "tests"]
extraPaths = ["apps/api/src"]
exclude = [
    "**/__pycache__",
    ".venv",
    ".ruff_cache",
    ".pytest_cache",
    "alembic/versions",
]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = "warning"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["apps/api", "apps/agents", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "ASYNC",
    "S",
    "T20",
    "SIM",
    "RUF",
]
ignore = [
    "S101",
]

[tool.ruff.lint.isort]
known-first-party = ["platform_api"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
